Fix squished figures on the frontend

--- a/projects/plugins/jetpack/extensions/blocks/blogroll/style.scss
+++ b/projects/plugins/jetpack/extensions/blocks/blogroll/style.scss
@@ -29,6 +29,7 @@
 
 			figure {
 				margin: 0;
+				flex-shrink: 0;
 
 				img {
 					border-radius: 50%;
